--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://bduvenhage.me" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: bernardt_d
 github_username:  bduvenhage
+linkedin_username:  bernardtduvenhage
 
 # Build settings
 markdown: kramdown
