--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Bernardt Duvenhage's Blog
-email: bernardt.duvenhage@gmail.com
+email: bernardt.duvenhage gmail
 description: >- # this means to ignore newlines until "baseurl:"
   Saving the world one line of code at a time - a blog on 'efficiency through algorithms and performance through data structures'.
 baseurl: "" # the subpath of your site, e.g. /blog
