--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://bduvenhage.me" # the base hostname & protocol for your site, e.g. http://example.com
 
+github_username: bduvenhage
 linkedin_username:  bernardtduvenhage
-
-
+twitter_username: bernardt_d
 
 # Build settings
 markdown: kramdown
