--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,9 @@ github_username: bduvenhage
 
 disqus:
   shortname: bduvenhage-me
-    
+
+show_excerpts: true
+
 # Build settings
 markdown: kramdown
 theme: minima
