--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,8 @@ theme: minima
 plugins:
   - jekyll-feed
   - jekyll-paginate
-
+  - jekyll-gist
+  
 paginate: 5
 paginate_path: "/blog/page:num/"
 
