--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
+
 title: Bernardt Duvenhage's Blog
+name: Bernardt Duvenhage's Blog
 email: bernardt.duvenhage@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Saving the world one line of code at a time - a blog on 'efficiency through algorithms and performance through data structures'.
