--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,8 @@ plugins:
   - jekyll-paginate
   - jekyll-gist
   
+google_analytics: UA-137789802-1
+
 paginate: 5
 paginate_path: "/blog/page:num/"
 
