--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ url: "http://bduvenhage.me" # the base hostname & protocol for your site, e.g. h
 
 github_username: bduvenhage
 # linkedin_username:  bernardtduvenhage
-# twitter_username: bernardt_d
+twitter_username: bernardt_d
 
 disqus:
   shortname: bduvenhage-me
