--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ url: "http://bduvenhage.me" # the base hostname & protocol for your site, e.g. h
 
 github_username: bduvenhage
 twitter_username: bernardt_d
-linkedin_username:  bernardtduvenhage
+# linkedin_username:  bernardtduvenhage
 
 disqus:
   shortname: bduvenhage-me
